<resources>
    <string name="app_name">Instagramclone</string>

    <string name="email_text">Email</string>
    <string name="senha_text">Senha</string>
    <string name="nome_text">Nome</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="digite_nome">Digite seu nome</string>

    <!-- activity de login -->
    <string name="bemvindo_loginscreen">Bem Vindo</string>
    <string name="facalogin_loginscreen">Faça login em sua conta</string>
    <string name="naopossuiconta_loginscreen">Não possui uma conta? Cadastre-se</string>
    <string name="entrar_loginscreen">Entrar</string>

    <!-- activity de cadastro -->
    <string name="cadastre_signinscreen">Cadastre-se</string>
    <string name="registrar_signinscreen">Registrar</string>

    <!-- main activity -->
    <string name="nome_usuario">Nome do usuário</string>

    <!-- menu -->
    <string name="menu_sair">Sair</string>
    <string name="menu_home">Home</string>
    <string name="menu_pesquisa">Pesquisa</string>
    <string name="menu_postagem">Postagem</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_publicar">Publicar</string>

    <!-- Fragment perfil -->
    <string name="publicacoes_perfil">Publicações</string>
    <string name="seguidores_perfil">Seguidores</string>
    <string name="seguindo_perfil">Seguindo</string>
    <string name="qt_seguidores_perfil">0</string>
    <string name="editar_perfil">Editar perfil</string>

    <!-- Fragment postagem -->
    <string name="abrir_camera">CÂMERA</string>
    <string name="abrir_galeria">GALERIA</string>

    <!-- Editar perfil activity -->
    <string name="alterar_foto">Alterar foto</string>
    <string name="salvar_alteracoes">Salvar alterações</string>

    <!-- Filtro activity -->
    <string name="descricao_filtro">Descrição</string>
    <string name="filtro_nome">Nome Filtro</string>

    <!-- visualizar postagem activity -->
    <string name="curtidas">0 curtidas</string>
    <string name="zerocurtidas">0</string>
    <string name="visualizar_comentarios">Visualizar comentários</string>
    
    <!-- activity comentario -->
    <string name="escreva_coment">Escreva um comentário</string>
    <string name="comentario">Comentário</string>


</resources>