<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageFeed"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="12dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImagePerfilFeed"
        app:srcCompat="@drawable/perfil_padrao" />

    <TextView
        android:id="@+id/textDescricaoFeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descricao_filtro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFeed" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImagePerfilFeed"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/perfil_padrao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNomeFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/nome_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/circleImagePerfilFeed"
        app:layout_constraintStart_toEndOf="@+id/circleImagePerfilFeed"
        app:layout_constraintTop_toTopOf="@+id/circleImagePerfilFeed" />

    <ImageView
        android:id="@+id/commentButtonFeed"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/likeButtonFeed"
        app:layout_constraintStart_toEndOf="@+id/likeButtonFeed"
        app:layout_constraintTop_toTopOf="@+id/likeButtonFeed"
        app:layout_constraintVertical_bias="0.625"
        app:srcCompat="@drawable/baseline_comment_24" />

    <ImageView
        android:id="@+id/likeButtonFeed"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textQuantidadeLikeFeed"
        app:layout_constraintStart_toEndOf="@+id/textQuantidadeLikeFeed"
        app:layout_constraintTop_toTopOf="@+id/textQuantidadeLikeFeed"
        app:srcCompat="@drawable/baseline_thumb_up_24" />

    <TextView
        android:id="@+id/textQuantidadeLikeFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/zerocurtidas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescricaoFeed" />
</androidx.constraintlayout.widget.ConstraintLayout>